back filesize try to fix

--- a/backend/angular/index.html
+++ b/backend/angular/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <script src="https://use.fontawesome.com/7bad8c4408.js"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-</head>
+<link rel="stylesheet" href="styles.ab9c6c67e8927db32e72.css"></head>
 <body>
 <div class="wrapper">
     <app-root></app-root>
 </div>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.7caf13ffde13aa795f21.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.03148b575b41c3ab0b47.js"></script><script type="text/javascript" src="main.b4664e9ebf9fe358d20b.js"></script></body>
 </html>
