--- a/backend/angular/index.html
+++ b/backend/angular/index.html
@@ -4,17 +4,17 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CvetochnyStore</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <script src="https://use.fontawesome.com/7bad8c4408.js"></script>
+    <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-<link rel="stylesheet" href="styles.901d9696bbbefe97d129.css"></head>
+<link rel="stylesheet" href="styles.2354b09a454553cef6b4.css"></head>
 <body>
 <div class="wrapper">
     <app-root></app-root>
 </div>
-<script type="text/javascript" src="runtime.1449bc812029cb5b3c6e.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.391715d67d379dbe8f73.js"></script></body>
+<script type="text/javascript" src="runtime.7b0deed73fcce9785e11.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.a2a7927ab8679d7e3f3f.js"></script></body>
 </html>
