--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CvetochnyStore</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <script src="https://use.fontawesome.com/7bad8c4408.js"></script>
+    <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
 </head>
 <body>
