--- a/backend/angular/index.html
+++ b/backend/angular/index.html
@@ -8,13 +8,14 @@
     <title>цветочный. Салон флористики</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-<link rel="stylesheet" href="styles.710a6ecc168991d29c35.css"></head>
+<link rel="stylesheet" href="styles.fc7e80635905fc728ac2.css"></head>
 <body>
 <div class="wrapper">
     <app-root></app-root>
 </div>
-<script type="text/javascript" src="runtime.e4023b5361c87bd63b57.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.510acdf45d4798dc7331.js"></script></body>
+<script type="text/javascript" src="runtime.e4023b5361c87bd63b57.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.208dfe624fe386387e81.js"></script></body>
 </html>
