--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>цветочный. Салон флористики</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
