dohera vsego, zabyval pushit dev

--- a/backend/angular/index.html
+++ b/backend/angular/index.html
@@ -1,21 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <title>цветочный. Салон флористики</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>цветочный. Салон флористики</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description"
+          content="Цветочный магазин в удобном месте. Всегда свежие цветы, оригинальные букеты. Огромный выбор декора, свечей и комнатных растеней.">
+    <meta name="keywords"
+          content="купить букет Харьков, цветы Харьков, цветы, букеты, букет Харьков, купить цветы Харьков, свадебная флористика Харьков">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <base href="/">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159058148-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-159058148-1');
+    </script>
     <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-<link rel="stylesheet" href="styles.7c2532b0d7eac1f2ed9e.css"></head>
+<link rel="stylesheet" href="styles.bfc0b82005a6b0f34a0c.css"></head>
 <body>
 <div class="wrapper">
     <app-root></app-root>
 </div>
-<script type="text/javascript" src="runtime.7e637d1aca0e1255a8bf.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.fd46870e5da7659bdfeb.js"></script></body>
+<script type="text/javascript" src="runtime.f829b626dfec9f34df91.js"></script><script type="text/javascript" src="polyfills.5d02add38b4048794431.js"></script><script type="text/javascript" src="scripts.050115bb809495601d14.js"></script><script type="text/javascript" src="main.3dff5f3fb2c84e17ee7c.js"></script></body>
 </html>
