--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <title>цветочный. Салон флористики</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>цветочный. Салон флористики</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description"
+          content="Цветочный магазин в удобном месте. Всегда свежие цветы, оригинальные букеты. Огромный выбор декора, свечей и комнатных растеней.">
+    <meta name="keywords"
+          content="купить букет Харьков, цветы Харьков, цветы, букеты, букет Харьков, купить цветы Харьков, свадебная флористика Харьков">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <base href="/">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159058148-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-159058148-1');
+    </script>
     <script src="https://kit.fontawesome.com/cb7a8f1aea.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/jquery.js"></script>
 </head>
